manifests/iperf3/network-policy.yaml
################################################################
#Name:  NetworkPolicy 
#Desc: YAML file for NetworkPolicy to define network rules
#      for iperf3 .NOT IN USE.
################################################################
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: iperf3-server-access
spec:
  podSelector:
    matchLabels:
      app: iperf3-server
  ingress:
  - ports:
    - port: 5201
    from:
    - podSelector:
        matchLabels:
          app: iperf3-client
